2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/decCommonSymbols.h: Remove file.
	* libdecnumber/decDPDSymbols.h: Likewise.
	* libdecnumber/decDoubleSymbols.h: Likewise.
	* libdecnumber/decPackedSymbols.h: Likewise.
	* libdecnumber/decQuadSymbols.h: Likewise.
	* libdecnumber/decSingleSymbols.h: Likewise.
	* libdecnumber/decDPD.h: Remove decDPDSymbols.h include.
	* libdecnumber/decNumberLocal.h: Remove decDPDSymbols.h and
	decCommonSymbols.h include.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/decContextSymbols.h: Remove file.
	* libdecnumber/decContext.h: Remove decContextSymbols.h include.
	* libdecnumber/Makefile.in: remove decContextSymbols.h associate
	rules.
	* ieee754r/frexpd32.c (frexp): Call decContextDefault instead of
	___decContextDefault.
	* ieee754r/ldexpd32.c (ldexp): Likewise.
	* sysdeps/soft-dfp/extendsddd2.c (extend): Likewise.
	* sysdeps/soft-dfp/floatsisd.c (float): Likewise.

2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/decNumberSymbols.h: Remove file.
	* libdecnumber/decNumber.h: Remove decNumberSymbols.h include.
	* decNumberMath/Versions (libdfp [LIBDFP_PRIVATE]): Remove symbols
	prepended '___' string.
	* decNumberMath/decNumberMath.c (___decNumberFloor): Likewise.
	(___decNumberIsEqual): Likewise.
	(___decNumberIsInteger): Likewise.
	(___decNumberMod): Likewise.
	(___decNumberPow): Likewise.
	(___decNumberSquareRoot): Likewise.
	(___decNumberSinh): Likewise.
	(___decNumberCosh): Likewise.
	(___decNumberTanh): Likewise.
	(___decNumberSin): Likewise.
	(___decNumberCos): Likewise.
	(___decNumberTan): Likewise.
	(___decNumberAtan): Likewise.
	* decNumberMath/decNumberMath.h (___decNumberPow): Likewise.
	(___decNumberSinh): Likewise.
	(___decNumberCosh): Likewise.
	(___decNumberTanh): Likewise.
	(___decNumberSin): Likewise.
	(___decNumberCos): Likewise.
	(___decNumberTan): Likewise.
	(___decNumberAtan): Likewise.
	* ieee754r/acoshd32.c: Likewise.