@@ -1,5 +1,10 @@
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* ieee754r/ilogbd32.c (ilogb): Use libdecnumber compare functions
+	instead of _Decimal compiler generated.
+
+2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* libdecnumber/decCommonSymbols.h: Remove file.
 	* libdecnumber/decDPDSymbols.h: Likewise.
 	* libdecnumber/decDoubleSymbols.h: Likewise.
